faq page | updated about with new course details (temp)

--- a/resources/assets/scss/pages/faq/_faq.scss
+++ b/resources/assets/scss/pages/faq/_faq.scss
@@ -41,13 +41,31 @@
 
     &__nav-links {
         max-width: 445px;
-        margin: 0 auto 30px;
+        padding-left: 24px;
+
+        li {
+            position: relative;
+            font-weight: 500;
+            font-style: italic;
+            margin-bottom: 10px;
+
+            &::after {
+                position: absolute;
+                content: "•";
+                font-family: 'open-sans';
+                font-size: 1.25em;
+                line-height: 27px;
+                left: -18px;
+                top: -1px;
+                color: $lightRed;
+            }
+        }
     }
 
     &__question-container {
         border-top: 1px solid lighten($lightRed, 20%);
-        margin: 20px 0 0;
-        padding: 40px 20px 20px;
+        margin: 20px 0;
+        padding: 20px 20px 0;
     }
 
     &__question {
@@ -56,16 +74,7 @@
         font-weight: 700;
         margin: 0 0 15px;
         text-transform: initial;
-        color: $lightRed;
-
-
-        &::before {
-            content: 'Q:';
-            padding-right: 8px;
-            position: relative;
-            display: inline-block;
-            top: 0;
-        }
+        color: $fontColour;
     }
 
     &__answer {
@@ -96,10 +105,10 @@
 
             &::after {
                 position: absolute;
-                font-family: 'open-sans';
-                font-size: 2em;
-                line-height: 27px;
                 content: "•";
+                font-family: 'open-sans';
+                font-size: 1.25em;
+                line-height: 27px;
                 left: -.7em;
                 color: $lightRed;
             }
@@ -109,7 +118,7 @@
     .content-block{
         @include pie-clearfix();
         width: 100%;
-        margin: 0 auto;
+        margin: 0 auto 40px;
         max-width: 920px;
     }
 
@@ -122,7 +131,7 @@
             width: 100% !important;
         }
 
-        &:nth-child(even) {
+        &:nth-child(2) {
             float: right;
         }
     }
