--- a/resources/assets/scss/pages/you-to-you/_you-to-you.scss
+++ b/resources/assets/scss/pages/you-to-you/_you-to-you.scss
@@ -52,7 +52,7 @@
     position: relative;
     width: 260px;
     border: 2px solid #f16060;
-    margin: auto;
+    margin: 0 auto 24px;
     padding: 20px 30px;
     cursor: pointer;
     background-color: rgba($white,0.6);
