--- a/resources/assets/scss/pages/about/_about.scss
+++ b/resources/assets/scss/pages/about/_about.scss
@@ -90,6 +90,10 @@
         width: 100%;
         margin: 0 auto;
         max-width: 920px;
+
+        &.--spacer {
+            margin: 60px auto 30px;
+        }
     }
 
     .col {
@@ -309,9 +313,9 @@
         text-align: center;
         line-height: 26px;
         float: left;
-        width: 49%;
+        width: calc(50% - 5px);
         min-height: 210px;
-        margin: 0 1% 1% 0;
+        margin: 0 10px 10px 0;
 
         @include breakpoint($break-800) {
             width: 100% !important;
@@ -319,9 +323,9 @@
             height: auto;
         }
 
-        &:nth-child(2) {
+        &:nth-child(2n) {
             display: block;
-            margin: 0 0 1% 0;
+            margin: 0 0 10px 0;
         }
 
         .icon {
@@ -358,6 +362,36 @@
                 &:after {
                     content: '\e62d';
                 }
+            }
+
+            &.facebook {
+                &:after {
+                    $size : 24px;
+                    content: '\e61f';
+                    font-size: $size;
+                    width: $size;
+                }
+            }
+        }
+    }
+
+    &.--coached {
+        .what-you-get__node {
+            margin: 0 0 10px;
+            width: calc(50% - 5px);
+
+            &:nth-child(1) {
+                display: block;
+                width: 100% !important;
+
+                p {
+                    width: 100%;
+                    max-width: initial;
+                }
+            }
+
+            &:nth-child(n+2):nth-child(even) {
+                margin-right: 10px;
             }
         }
     }
