--- a/resources/assets/scss/core/_module.scss
+++ b/resources/assets/scss/core/_module.scss
@@ -349,6 +349,10 @@
         height: 40px;
         right: 0px;
 
+        [data-page='forum'] & {
+            display: none;
+        }
+
         svg {
             width: 80%;
             height: 40px;
