--- a/resources/assets/scss/ui/_buttons.scss
+++ b/resources/assets/scss/ui/_buttons.scss
@@ -135,16 +135,17 @@ button.button {
 
 .iecon {
     $icon-size: 40px;
-    box-shadow: inset 0 0 0px 2px white;
+    box-shadow: 0 0 0px 2px #F16060;
     border-radius: 100%;
     height: $icon-size;
     width: $icon-size;
     position: relative;
     opacity: 1;
+    margin: auto;
     transition: box-shadow $transition, opacity $transition;
 
     &:hover {
-        box-shadow: inset 0 0 10px 5px rgba($white, 0);
+        box-shadow: 0 0 10px 5px rgba($white, 0);
 
         .iecon__arrow {
             transform: scale(1.3);
@@ -156,5 +157,7 @@ button.button {
         height: $icon-size;
         transition: transform $transition;
         transform: scale(1);
+        background: rgba($white, 0.6);
+        border-radius: 100%;
     }
 }
