--- a/resources/assets/scss/core/_base.scss
+++ b/resources/assets/scss/core/_base.scss
@@ -50,6 +50,18 @@ h1.plain {
     opacity: 0.5;
 }
 
+.menu-auth-mobile {
+    display: none;
+
+    @include breakpoint($break-620) {
+        display: block;
+    }
+
+    &.is-hidden-g {
+        display: none !important;
+    }
+}
+
 .auth {
     position: fixed;
     top: 0;
@@ -60,6 +72,7 @@ h1.plain {
 
     @include breakpoint($break-620) {
         right: 20px;
+        display: none; //moves to menu for mobile.
     }
 
     a {
