--- a/resources/assets/scss/dashboard/_dashboard.scss
+++ b/resources/assets/scss/dashboard/_dashboard.scss
@@ -410,7 +410,7 @@ ul.and-i-am {
         margin: 20px auto;
     }
 
-    &.--intrinsic-video {
+    &.intrinsic-video {
         padding-bottom: 56.25%;
         height: 0;
 
