added grey cover to video on Module 6, so title is more legable.

--- a/resources/assets/scss/pages/home/_home.scss
+++ b/resources/assets/scss/pages/home/_home.scss
@@ -10,6 +10,17 @@
         left: 0;
         right: 0;
         bottom: 0;
+
+        [data-page='gratitude'] & {
+             &::after {
+                position: absolute;
+                content: '';
+                top: 0;
+                width: 100%;
+                height: 100%;
+                background: rgba(171, 171, 169, 0.3);
+            }
+        }
     }
 
     .display-video {
