--- a/resources/assets/scss/ui/_buttons.scss
+++ b/resources/assets/scss/ui/_buttons.scss
@@ -161,3 +161,9 @@ button.button {
         border-radius: 100%;
     }
 }
+
+[data-current-section='1'] {
+    .iecon__arrow {
+        background: none;
+    }
+}
