--- a/resources/assets/scss/core/_module.scss
+++ b/resources/assets/scss/core/_module.scss
@@ -356,7 +356,7 @@
         height: 40px;
         right: 5px;
 
-        [data-page='forum'] & {
+        [data-page='forum'] &, [data-page='home'] & {
             display: none;
         }
 
