some changes to the dashboard

--- a/resources/assets/scss/dashboard/_dashboard.scss
+++ b/resources/assets/scss/dashboard/_dashboard.scss
@@ -388,6 +388,9 @@ ul.and-i-am {
     .page-icon:after {
         content: "\e608";
     }
+    .dashboard {
+        margin-top: 20px;
+    }
 }
 
 .your-video {
