forced focus state on text areas in form. To fix bug of backgroud not changing color on focus.

--- a/resources/assets/scss/forum/_comment.scss
+++ b/resources/assets/scss/forum/_comment.scss
@@ -61,6 +61,10 @@ form.comment-form {
     textarea {
         width: 100%;
         font-size: 17px;
+
+        &:focus {
+            background: rgba(255, 255, 255, 0.8) !important
+        }
     }
 
     .error-message {
