--- a/resources/assets/css/admin.css
+++ b/resources/assets/css/admin.css
@@ -73,7 +73,7 @@ form.comment-form textarea {
   width: 100%;
   font-size: 17px;
 }
-form.comment-form textarea:focus {
+form.comment-form textarea:focus, form.comment-form textarea:hover {
   background: rgba(255, 255, 255, 0.8) !important;
 }
 form.comment-form .error-message {
