spacing around share buttons on module 3 made wider for mobile view

--- a/resources/assets/scss/pages/visualise/_visualise.scss
+++ b/resources/assets/scss/pages/visualise/_visualise.scss
@@ -390,7 +390,7 @@ ul.social {
         font-size: 13px;
         color: $fontColour;
         cursor: pointer;
-        margin: 0 10px;
+        margin: 12px;
         @include transition(color $transition);
 
         a {
