--- a/resources/assets/scss/pages/home/_home.scss
+++ b/resources/assets/scss/pages/home/_home.scss
@@ -215,11 +215,10 @@ span.resolution {
         float: right;
 
         a{
-            height: 30px;
             background-color: $lightRed;
             color: $white;
             border-right: 1px solid $white;
-            float:left;
+            float: right;
             margin-bottom: 0px;
         }
     }
