add enroll button. css tweaks and routing corrections.

--- a/resources/assets/scss/main.scss
+++ b/resources/assets/scss/main.scss
@@ -44,6 +44,7 @@
 @import "pages/misc/tag-cloud";
 @import "pages/misc/login";
 @import "pages/misc/payment";
+@import "pages/misc/right-for-me";
 @import "pages/misc/account-creation";
 @import "pages/account/account";
 
