fix pre module text padding

--- a/resources/assets/scss/pages/home/_home.scss
+++ b/resources/assets/scss/pages/home/_home.scss
@@ -292,6 +292,10 @@ span.resolution {
             a{
                 padding: 15px;
                 font-size: 18px;
+
+                &.premodule{
+                    padding: 0;
+                }
             }
         }
     }
