don't show edit word cloud button on print manifesto

--- a/resources/assets/scss/dashboard/_dashboard-printstyle.scss
+++ b/resources/assets/scss/dashboard/_dashboard-printstyle.scss
@@ -132,7 +132,8 @@
 
         .is-not-complete,
         .is-locked,
-        .actions {
+        .actions,
+        .edit-button-container {
             display: none;
         }
 
