--- a/resources/assets/scss/core/_fonts.scss
+++ b/resources/assets/scss/core/_fonts.scss
@@ -42,168 +42,210 @@
 
 @font-face {
     font-family: 'icomoon';
-    src:    url('../fonts/icomoon.eot?sfeyxr');
-    src:    url('../fonts/icomoon.eot?sfeyxr#iefix') format('embedded-opentype'),
-        url('../fonts/icomoon.ttf?sfeyxr') format('truetype'),
-        url('../fonts/icomoon.woff?sfeyxr') format('woff'),
-        url('../fonts/icomoon.svg?sfeyxr#icomoon') format('svg');
+    src:    url('../fonts/icomoon.eot?oljm87');
+    src:    url('../fonts/icomoon.eot?oljm87#iefix') format('embedded-opentype'),
+        url('../fonts/icomoon.ttf?oljm87') format('truetype'),
+        url('../fonts/icomoon.woff?oljm87') format('woff'),
+        url('../fonts/icomoon.svg?oljm87#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
-// .icon-module-onboarding:before {
-//     content: "\e600";
-// }
-// .icon-module1:before {
-//     content: "\e601";
-// }
-// .icon-module2:before {
-//     content: "\e602";
-// }
-// .icon-module3:before {
-//     content: "\e603";
-// }
-// .icon-module4:before {
-//     content: "\e604";
-// }
-// .icon-module5:before {
-//     content: "\e605";
-// }
-// .icon-module6:before {
-//     content: "\e606";
-// }
-// .icon-module7:before {
-//     content: "\e607";
-// }
-// .icon-module8:before {
-//     content: "\e608";
-// }
-// .icon-menu_module-onboarding:before {
-//     content: "\e609";
-// }
-// .icon-menu_module1:before {
-//     content: "\e60a";
-// }
-// .icon-menu_module2:before {
-//     content: "\e60b";
-// }
-// .icon-menu_module3:before {
-//     content: "\e60c";
-// }
-// .icon-menu_module4:before {
-//     content: "\e60d";
-// }
-// .icon-menu_module5:before {
-//     content: "\e60e";
-// }
-// .icon-menu_module6:before {
-//     content: "\e60f";
-// }
-// .icon-menu_module7:before {
-//     content: "\e610";
-// }
-// .icon-menu_module8:before {
-//     content: "\e611";
-// }
-// .icon-about:before {
-//     content: "\e612";
-// }
-// .icon-account:before {
-//     content: "\e613";
-// }
-// .icon-arrow:before {
-//     content: "\e614";
-// }
-// .icon-camera:before {
-//     content: "\e615";
-// }
-// .icon-close:before {
-//     content: "\e616";
-// }
-// .icon-collapse:before {
-//     content: "\e617";
-// }
-// .icon-dashboard:before {
-//     content: "\e618";
-// }
-// .icon-download:before {
-//     content: "\e619";
-// }
-// .icon-edit:before {
-//     content: "\e61a";
-// }
-// .icon-expand:before {
-//     content: "\e61b";
-// }
-// .icon-validate-circle:before {
-//     content: "\e61c";
-// }
-// .icon-validate:before {
-//     content: "\e61d";
-// }
-// .icon-email:before {
-//     content: "\e61e";
-// }
-// .icon-facebook:before {
-//     content: "\e61f";
-// }
-// .icon-pinterest:before {
-//     content: "\e620";
-// }
-// .icon-locked:before {
-//     content: "\e621";
-// }
-// .icon-unlocked:before {
-//     content: "\e622";
-// }
-// .icon-module3-cat1:before {
-//     content: "\e623";
-// }
-// .icon-module3-cat2:before {
-//     content: "\e624";
-// }
-// .icon-module3-cat3:before {
-//     content: "\e625";
-// }
-// .icon-replied:before {
-//     content: "\e626";
-// }
-// .icon-terms-privacy:before {
-//     content: "\e627";
-// }
-// .icon-test-8modules:before {
-//     content: "\e628";
-// }
-// .icon-test-lauren:before {
-//     content: "\e629";
-// }
-// .icon-test-quote-close:before {
-//     content: "\e62a";
-// }
-// .icon-test-quote-open:before {
-//     content: "\e62b";
-// }
-// .icon-time-lifetime:before {
-//     content: "\e62c";
-// }
-// .icon-forum:before {
-//     content: "\e62d";
-// }
-// .icon-introduction:before {
-//     content: "\e62e";
-// }
-// .icon-upload-video:before {
-//     content: "\e62f";
-// }
-// .icon-arrow-down:before {
-//     content: "\e630";
-// }
-// .icon-icon-clarity:before {
-//     content: "\e631";
-// }
-// .icon-icon-clarity-shield:before {
-//     content: "\e632";
-// }
-// .icon-iconmonstr-help-1:before {
-//     content: "\e633";
-// }
+[class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-data-extraction:before {
+    content: "\e906";
+}
+.icon-interactive:before {
+    content: "\e907";
+}
+.icon-build:before {
+    content: "\e908";
+}
+.icon-eight-dots:before {
+    content: "\e903";
+}
+.icon-15-min:before {
+    content: "\e904";
+}
+.icon-completed:before {
+    content: "\e905";
+}
+.icon-manifesto:before {
+    content: "\e902";
+}
+.icon-group:before {
+    content: "\e900";
+}
+.icon-support:before {
+    content: "\e901";
+}
+.icon-module-onboarding:before {
+    content: "\e600";
+}
+.icon-module1:before {
+    content: "\e601";
+}
+.icon-module2:before {
+    content: "\e602";
+}
+.icon-module3:before {
+    content: "\e603";
+}
+.icon-module4:before {
+    content: "\e604";
+}
+.icon-module5:before {
+    content: "\e605";
+}
+.icon-module6:before {
+    content: "\e606";
+}
+.icon-module7:before {
+    content: "\e607";
+}
+.icon-module8:before {
+    content: "\e608";
+}
+.icon-menu_module-onboarding:before {
+    content: "\e609";
+}
+.icon-menu_module1:before {
+    content: "\e60a";
+}
+.icon-menu_module2:before {
+    content: "\e60b";
+}
+.icon-menu_module3:before {
+    content: "\e60c";
+}
+.icon-menu_module4:before {
+    content: "\e60d";
+}
+.icon-menu_module5:before {
+    content: "\e60e";
+}
+.icon-menu_module6:before {
+    content: "\e60f";
+}
+.icon-menu_module7:before {
+    content: "\e610";
+}
+.icon-menu_module8:before {
+    content: "\e611";
+}
+.icon-about:before {
+    content: "\e612";
+}
+.icon-account:before {
+    content: "\e613";
+}
+.icon-arrow:before {
+    content: "\e614";
+}
+.icon-camera:before {
+    content: "\e615";
+}
+.icon-close:before {
+    content: "\e616";
+}
+.icon-collapse:before {
+    content: "\e617";
+}
+.icon-dashboard:before {
+    content: "\e618";
+}
+.icon-download:before {
+    content: "\e619";
+}
+.icon-edit:before {
+    content: "\e61a";
+}
+.icon-expand:before {
+    content: "\e61b";
+}
+.icon-validate-circle:before {
+    content: "\e61c";
+}
+.icon-validate:before {
+    content: "\e61d";
+}
+.icon-email:before {
+    content: "\e61e";
+}
+.icon-facebook:before {
+    content: "\e61f";
+}
+.icon-pinterest:before {
+    content: "\e620";
+}
+.icon-locked:before {
+    content: "\e621";
+}
+.icon-unlocked:before {
+    content: "\e622";
+}
+.icon-module3-cat1:before {
+    content: "\e623";
+}
+.icon-module3-cat2:before {
+    content: "\e624";
+}
+.icon-module3-cat3:before {
+    content: "\e625";
+}
+.icon-replied:before {
+    content: "\e626";
+}
+.icon-terms-privacy:before {
+    content: "\e627";
+}
+.icon-test-8modules:before {
+    content: "\e628";
+}
+.icon-test-lauren:before {
+    content: "\e629";
+}
+.icon-test-quote-close:before {
+    content: "\e62a";
+}
+.icon-test-quote-open:before {
+    content: "\e62b";
+}
+.icon-time-lifetime:before {
+    content: "\e62c";
+}
+.icon-forum:before {
+    content: "\e62d";
+}
+.icon-introduction:before {
+    content: "\e62e";
+}
+.icon-upload-video:before {
+    content: "\e62f";
+}
+.icon-arrow-down:before {
+    content: "\e630";
+}
+.icon-icon-clarity:before {
+    content: "\e631";
+}
+.icon-icon-clarity-shield:before {
+    content: "\e632";
+}
+.icon-iconmonstr-help-1:before {
+    content: "\e633";
+}
