--- a/resources/assets/scss/core/_fonts.scss
+++ b/resources/assets/scss/core/_fonts.scss
@@ -42,11 +42,11 @@
 
 @font-face {
     font-family: 'icomoon';
-    src:    url('../fonts/icomoon.eot?oljm87');
-    src:    url('../fonts/icomoon.eot?oljm87#iefix') format('embedded-opentype'),
-        url('../fonts/icomoon.ttf?oljm87') format('truetype'),
-        url('../fonts/icomoon.woff?oljm87') format('woff'),
-        url('../fonts/icomoon.svg?oljm87#icomoon') format('svg');
+    src:    url('../fonts/icomoon.eot?rethur');
+    src:    url('../fonts/icomoon.eot?rethur#iefix') format('embedded-opentype'),
+        url('../fonts/icomoon.ttf?rethur') format('truetype'),
+        url('../fonts/icomoon.woff?rethur') format('woff'),
+        url('../fonts/icomoon.svg?rethur#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -66,6 +66,9 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-question-bubble:before {
+    content: "\e909";
+}
 .icon-data-extraction:before {
     content: "\e906";
 }
@@ -249,3 +252,4 @@
 .icon-iconmonstr-help-1:before {
     content: "\e633";
 }
+
