--- a/resources/icomoon/style.css
+++ b/resources/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'icomoon';
-    src:    url('fonts/icomoon.eot?oljm87');
-    src:    url('fonts/icomoon.eot?oljm87#iefix') format('embedded-opentype'),
-        url('fonts/icomoon.ttf?oljm87') format('truetype'),
-        url('fonts/icomoon.woff?oljm87') format('woff'),
-        url('fonts/icomoon.svg?oljm87#icomoon') format('svg');
+    src:    url('fonts/icomoon.eot?rethur');
+    src:    url('fonts/icomoon.eot?rethur#iefix') format('embedded-opentype'),
+        url('fonts/icomoon.ttf?rethur') format('truetype'),
+        url('fonts/icomoon.woff?rethur') format('woff'),
+        url('fonts/icomoon.svg?rethur#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -24,6 +24,9 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-question-bubble:before {
+    content: "\e909";
+}
 .icon-data-extraction:before {
     content: "\e906";
 }
